# midas

./: .env.example  .gitignore  pyproject.toml  pytest.ini
.claude/commands/: analyze-project.md
docs/: CODEBASE_MAP.md  negative_screening.md  requirements.md
src/midas/: __init__.py  __main__.py  config.py  logging_config.py  main.py  models.py  orchestrator.py
src/midas/agents/: __init__.py  company_watcher.py  critical_company_finder.py  farseer.py  foresight_manager.py  foresight_to_company_translator.py  general_news_watcher.py  learning_agent.py  model_calibration_agent.py  negative_info_watcher.py  news_quality_filter.py  news_watcher_base.py  other_gov_news_watcher.py  other_gov_watcher.py  portfolio_analyzer.py  portfolio_manager.py  prediction_monitor.py  price_event_analyzer.py  tech_news_watcher.py  us_gov_news_watcher.py  us_gov_watcher.py
src/midas/tools/: __init__.py  company_news_fetcher.py  feedback_loader.py  portfolio_manager.py  quality_filters.py  raindrop_sync.py  report_generator.py  rss_fetcher.py  stock_screener.py
tests/: __init__.py  conftest.py
tests/agents/: test_company_watcher.py
